<resources>
    <!-- *** app strings *** -->
    <string name="app_name">Kardia CRM</string>
    <string name="nav_header">Kardia CRM App</string>

    <string name="action_edit_profile">Edit Profile</string>

    <!-- *** login *** -->
    <string name="login_title">Kardia CRM</string>
    <string name="kardia_logo">Kardia Logo</string>
    <string name="login_message">Log-in</string>
    <string name="username">Username</string>
    <string name="spinner_label">Select Connection Protocol</string>
    <string name="password">Password</string>
    <string name="server_name">Server Name or Address</string>
    <string name="port_number">Port Number</string>
    <string name="enter_name">Enter a username.</string>
    <string name="enter_server">Enter a server address.</string>
    <string name="enter_port">Enter a port number.</string>

    <!-- *** general *** -->
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="comments">Comments</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="search_partners">Search Partners&#8230;</string>
    <string name="close">close fragment</string>

    <!-- *** Add Profile *** -->
    <string name="title_activity_profile">Profile Activity</string>
    <string name="profile_input_photo_button">Change</string>
    <string name="contact">Contact</string>
    <string name="timeline">Timeline</string>
    <string name="role">Role</string>
    <string name="no_email">No Email Address</string>
    <string name="no_phone">No Phone Number</string>
    <string name="no_address">No Street Address</string>

    <!-- *** Sign-Up *** -->
    <string name="form_type">Form Type</string>
    <string name="form_university">University</string>
    <string name="form_event">Event</string>
    <string name="internship">Internship?</string>
    <string name="one_year">One Year?</string>
    <string name="long_term">Long Term?</string>
    <string name="spring_break">Spring Break?</string>
    <string name="grad_year">Grad\nYear</string>
    <string name="complete_btn">Complete Form</string>

    <!-- *** Add Form *** -->
    <string name="select_tag">Select Tag</string>
    <string name="form_tag">Form Tags</string>
    <string name="form_description">Title</string>
    <string name="sign_up_interest_tag">Interests Tags</string>
    <string name="sign_up_skills_tag">Skills Tags</string>


    <!-- *** Interest form ** -->
    <string name="interest_form_summer">Summer Internship</string>
    <string name="interest_form_career">Career/Long-Term</string>
    <string name="interest_form_volunteer">Volunteer/Associate</string>
    <string name="interest_form_pray">Praying for Lightsys</string>
    <string name="interest_form_one_year">One Year Internship</string>
    <string name="interest_form_spring_break">Code-a-Thon</string>

    <string name="interest_form_programming">Programming - Web/Mobile/Desktop</string>
    <string name="interest_form_design">Web Design/Graphic Design</string>
    <string name="interest_form_help_desk">Help Desk/PC Repair</string>
    <string name="interest_form_Networking">Networking/Wifi/WAN</string>
    <string name="interest_form_it_consult">IT Consultant</string>
    <string name="interest_form_it_manage">IT Management</string>
    <string name="interest_form_business">Business/Systems Analyst</string>
    <string name="interest_form_server_admin">Server Admin - Linux/Windows</string>


    <!-- *** engagement *** -->
    <string name="title_activity_interaction">Record an Interaction</string>
    <string name="type">Type</string>
    <string name="choose_date">Choose Date</string>
    <string name="subject">Subject</string>
    <string name="notes">Notes</string>
    <string name="followup_checkbox">Schedule Followup</string>
    <string name="followup_date">Followup Date</string>
    <string name="followup_note">Followup Note</string>
    <string name="track_step">Track: Step</string>
    <string name="finish_step">Finish Step</string>


    <!-- *** hints *** -->
    <string name="search_hint">Search</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_area_code">Area</string>
    <string name="hint_country_code">+1</string>
    <string name="hint_email">Email</string>
    <string name="hint_street_address">Street Address</string>
    <string name="hint_city">City</string>
    <string name="hint_state">State</string>
    <string name="hint_zip">ZIP</string>
    <string name="hint_grad_year">Graduation Year</string>
    <string name="hint_internship">Internship?</string>
    <string name="hint_one_year">One Year?</string>
    <string name="hint_long_term">Long Term?</string>
    <string name="hint_spring_break">Spring Break?</string>
    <string name="hint_form_description">form description</string>

    <!-- *** Image content descriptions *** -->
    <string name="cd_profile_picture">profile picture</string>
    <string name="cd_grad_year">graduation cap icon</string>
    <string name="cd_add">add icon</string>
    <string name="cd_tag">tag icon</string>
    <string name="cd_star">star icon</string>
    <string name="cd_email">letter icon</string>
    <string name="cd_location">location marker icon</string>
    <string name="cd_person">person icon</string>
    <string name="cd_phone">phone icon</string>
    <string name="cd_camera">camera icon</string>
    <string name="cd_role">role/connection icon</string>
    <string name="cd_profile">profile</string>

    <!-- *** icons *** -->
    <string name="check_mark">\u2713</string>
    <string name="sign_up_prompt">Sign up</string>
    <string name="add_form_prompt">Add form</string>

    <!-- *** buttons *** -->
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="sign_up_button">Sign-Up Sheet</string>
    <string name="interest_button">Interest Form</string>
    <string name="cancel_button">Cancel</string>

    <!-- *** Navigation Items *** -->
    <string name="logout">Logout</string>
    <string name="engagement">Engagement</string>
    <string name="sign_up">Sign-Up Forms</string>
    <string name="collaborators">Collaborators</string>


    <!-- *** spinners *** -->

    <string-array name="form_university_spinner">
        <item>Abilene</item>
        <item>LeTU</item>
        <item>Baylor</item>
        <item>Taylor</item>
    </string-array>

    <string-array name="form_event_spinner">
        <item>Classroom</item>
        <item>CareerFair</item>
        <item>Booth</item>
    </string-array>

    <string-array name="phone_spinner">
        <item>Mobile</item>
        <item>Home</item>
    </string-array>
    <string-array name="protocol_options">
        <item>http</item>
        <item>https</item>
    </string-array>
    <string-array name="role_options">
        <item>None</item>
        <item>Mobilizer</item>
        <item>NonMobilizer</item>
    </string-array>
    <string-array name="type_spinner">
        <item>Email</item>
        <item>In-Person</item>
        <item>Phone Call</item>
        <item>Sign-Up List</item>
        <item>Update</item>
    </string-array>
    <string-array name="form_type_spinner">
        <item>Sign-Up Sheet</item>
        <item>Interest Form</item>
    </string-array>

</resources>
