<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal" android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ImageView
        android:contentDescription="@string/cd_tag"
        android:layout_width="@dimen/profile_input_icon_size"
        android:layout_height="@dimen/profile_input_icon_size"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_tags" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textColorHint="@color/divider"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/programming_chk"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/interest_form_programming"/>

        <CheckBox
            android:id="@+id/design_chk"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/interest_form_design"/>

        <CheckBox
            android:id="@+id/help_desk_chk"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/interest_form_help_desk"/>

        <CheckBox
            android:id="@+id/networking_chk"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/interest_form_Networking"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textColorHint="@color/divider"
        android:orientation="vertical">
        <CheckBox
            android:id="@+id/it_consultant_chk"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/interest_form_it_consult"/>

        <CheckBox
            android:id="@+id/it_management_chk"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/interest_form_it_manage"/>

        <CheckBox
            android:id="@+id/business_chk"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/interest_form_business"/>

        <CheckBox
            android:id="@+id/server_admin_chk"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/interest_form_server_admin"/>

    </LinearLayout>
</LinearLayout>