<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:contentDescription="@string/cd_tag"
        android:layout_width="@dimen/profile_input_icon_size"
        android:layout_height="@dimen/profile_input_icon_size"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_tags" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textColorHint="@color/divider"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/internship_chk"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/interest_form_summer"/>

        <CheckBox
            android:id="@+id/one_year_chk"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/interest_form_one_year"/>

        <CheckBox
            android:id="@+id/career_chk"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/interest_form_career"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textColorHint="@color/divider"
        android:orientation="vertical">
        <CheckBox
            android:id="@+id/volunteer_chk"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/interest_form_volunteer"/>

        <CheckBox
            android:id="@+id/spring_break_chk"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/interest_form_spring_break"/>

        <CheckBox
            android:id="@+id/pray_chk"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/interest_form_pray"/>

    </LinearLayout>

</LinearLayout>