<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    >

    <TableRow
        android:id="@+id/form_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="7">
        <TextView
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:padding="10dp"
            android:textSize="20sp"
            android:layout_column="1"
            android:layout_weight="3"
            android:gravity="bottom|center_horizontal"
            android:background="@drawable/table_cell_left_right"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_column="2"
            android:layout_weight="1"
            android:padding="10dp"
            android:gravity="bottom|center_horizontal"
            android:background="@drawable/table_cell_left_right"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:text="@string/grad_year"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_column="3"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_gravity="center_vertical"
            android:gravity="bottom|center_horizontal"
            android:background="@drawable/table_cell_left_right"/>


        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight=".5"
            android:background="@drawable/table_cell_left_right">

            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="150dp"
                      android:layout_height="wrap_content"
                      android:text="@string/internship"
                      android:textSize="20sp"
                      android:lines="1"
                      android:textColor="@color/black"
                      android:paddingLeft="10dp"
                      android:paddingStart="10dp"
                      android:paddingRight="10dp"
                      android:paddingEnd="10dp"
                      android:rotation="-90"
                      android:layout_gravity="center"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight=".5"
            android:background="@drawable/table_cell_left_right">

            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="150dp"
                      android:layout_height="wrap_content"
                      android:text="@string/one_year"
                      android:textSize="20sp"
                      android:lines="1"
                      android:textColor="@color/black"
                      android:paddingLeft="10dp"
                      android:paddingStart="10dp"
                      android:paddingRight="10dp"
                      android:paddingEnd="10dp"
                      android:rotation="-90"
                      android:layout_gravity="center"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight=".5"
            android:background="@drawable/table_cell_left_right">

            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="150dp"
                      android:layout_height="wrap_content"
                      android:text="@string/long_term"
                      android:textSize="20sp"
                      android:lines="1"
                      android:textColor="@color/black"
                      android:paddingLeft="10dp"
                      android:paddingStart="10dp"
                      android:paddingRight="10dp"
                      android:paddingEnd="10dp"
                      android:rotation="-90"
                      android:layout_gravity="center"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight=".5"
            android:background="@drawable/table_cell_left_right">

            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="150dp"
                      android:layout_height="wrap_content"
                      android:text="@string/spring_break"
                      android:textSize="20sp"
                      android:lines="1"
                      android:textColor="@color/black"
                      android:paddingLeft="10dp"
                      android:paddingStart="10dp"
                      android:paddingRight="10dp"
                      android:paddingEnd="10dp"
                      android:rotation="-90"
                      android:layout_gravity="center"/>
        </FrameLayout>

    </TableRow>

</TableLayout>