<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingEnd="@dimen/profile_input_layout_margin_right">

    <ImageView
        android:contentDescription="@string/cd_person"
        android:layout_width="@dimen/profile_input_icon_size"
        android:layout_height="@dimen/profile_input_icon_size"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_person_black_24dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textColorHint="@color/divider">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_input_name_first"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapWords"
            android:hint="@string/hint_first_name"
            android:nextFocusDown="@+id/profile_input_name_last" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:textColorHint="@color/divider">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_input_name_last"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/hint_last_name"/>

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>